--- a/vues/css/styleLargeurFixe.css
+++ b/vues/css/styleLargeurFixe.css
@@ -13,12 +13,11 @@ body { margin: 0pt;
              width: 750px;
              left: 50%;
              margin-left: -375px;
-             background-color: rgb(204, 204, 255);
 }
 
 #header { height: 100px;
           width: 100%;
-          background-color: rgb(153, 204, 204);
+          padding-bottom: 100px;
           text-align: center;
           font-size: 20px;
 }
